--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@
  .search {
    display: flex;
    justify-content: center;
+   margin-top: 40px;
  }
 
  .serch_content {
@@ -105,7 +106,7 @@
 
  .luxurycar h1 {
    font-style: normal;
-   font-weight: 800;
+   font-weight: 700;
    font-size: 48px !important;
    line-height: 60px;
 
